--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
 "version": 2,
 "builds": [
-{ "src": "api/index.py", "use": "@vercel/python" }
+{ "src": "api/index_gemini.py", "use": "@vercel/python" }
 ],
 "routes": [
 { "src": "/static/(.*)", "dest": "/static/$1" },
-{ "src": "/(.*)", "dest": "api/index.py" }
+{ "src": "/(.*)", "dest": "api/index_gemini.py" }
 ]
 }
