--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ GEMINI_API_KEY=AIzaSyCLeYrtFCiTfPEae83hCK4BB55Qq03gObU
 # Flask
 FLASK_ENV=production
 SECRET_KEY=super-secret-key
+
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+SECRET_KEY=change-this-to-a-random-secret-key-in-production
